# ai-governor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
governor-ts/: package-lock.json  package.json  tsconfig.json
governor-ts/coverage/: clover.xml  coverage-final.json  index.html
governor-ts/coverage/src/: index.html  index.ts.html  types.ts.html
governor-ts/coverage/src/analytics/: graph_algorithms.ts.html  index.html
governor-ts/coverage/src/backend/: base.ts.html  index.html  memory.ts.html  neo4j.ts.html
governor-ts/coverage/src/engine/: guards.ts.html  index.html  transition.ts.html  validation.ts.html
governor-ts/coverage/src/guards/: executor.ts.html  index.html
governor-ts/coverage/src/mcp/: index.html  tools.ts.html
governor-ts/coverage/src/scoring/: index.html  rubric.ts.html
governor-ts/src/backend/: neo4j.ts
governor-ts/src/engine/: validation.ts
governor/backend/: async_neo4j_backend.py  neo4j_backend.py
governor/engine/: transition_engine.py
tests/: test_async_engine.py  test_bugfixes.py
tests/integration/: test_neo4j_integration.py
