[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-governor"
version = "0.3.0"
description = "Quality gates for AI agents. Guards that don't get tired."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Julian Busch"}]
requires-python = ">=3.9"
dependencies = []
keywords = ["ai", "agents", "governance", "quality-gate", "state-machine", "neo4j", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/neo4j-labs/ai-governor"
Documentation = "https://github.com/neo4j-labs/ai-governor/tree/main/docs"
Repository = "https://github.com/neo4j-labs/ai-governor"
Issues = "https://github.com/neo4j-labs/ai-governor/issues"

[project.optional-dependencies]
neo4j = ["neo4j>=5.0", "python-dotenv>=0.19"]
mcp = ["mcp>=1.0"]
metrics = ["prometheus_client>=0.17"]
types = ["typing_extensions>=4.0; python_version < '3.12'"]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio", "ruff", "mypy", "typing_extensions>=4.0"]

[tool.setuptools.packages.find]
include = ["governor*"]

[tool.setuptools.package-data]
governor = ["py.typed", "schema/state_machine.json", "schema/neo4j_schema.cypher", "scoring/rubrics/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
